fix: text wrapping

--- a/apps/front/src/presentation/styles/global.scss
+++ b/apps/front/src/presentation/styles/global.scss
@@ -26,3 +26,13 @@ ul,
 li {
     list-style: none;
 }
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    white-space: pre-wrap;
+}
